// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer/components/notifications/NotificationFooter.tsx > presents the Copilot actor for an agent session notification 1`] = `
<div>
  <div
    class="text-xs opacity-80 prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-component="Stack"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-wrap="wrap"
  >
    <div
      class="prc-Stack-Stack-UQ9k6"
      data-align="center"
      data-component="Stack"
      data-direction="horizontal"
      data-gap="condensed"
      data-justify="start"
      data-padding="none"
      data-testid="avatar"
      data-wrap="nowrap"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-copilot"
        data-component="Octicon"
        display="inline-block"
        fill="currentColor"
        focusable="false"
        height="14"
        overflow="visible"
        style="vertical-align: text-bottom;"
        viewBox="0 0 16 16"
        width="14"
      >
        <path
          d="M7.998 15.035c-4.562 0-7.873-2.914-7.998-3.749V9.338c.085-.628.677-1.686 1.588-2.065.013-.07.024-.143.036-.218.029-.183.06-.384.126-.612-.201-.508-.254-1.084-.254-1.656 0-.87.128-1.769.693-2.484.579-.733 1.494-1.124 2.724-1.261 1.206-.134 2.262.034 2.944.765.05.053.096.108.139.165.044-.057.094-.112.143-.165.682-.731 1.738-.899 2.944-.765 1.23.137 2.145.528 2.724 1.261.566.715.693 1.614.693 2.484 0 .572-.053 1.148-.254 1.656.066.228.098.429.126.612.012.076.024.148.037.218.924.385 1.522 1.471 1.591 2.095v1.872c0 .766-3.351 3.795-8.002 3.795Zm0-1.485c2.28 0 4.584-1.11 5.002-1.433V7.862l-.023-.116c-.49.21-1.075.291-1.727.291-1.146 0-2.059-.327-2.71-.991A3.222 3.222 0 0 1 8 6.303a3.24 3.24 0 0 1-.544.743c-.65.664-1.563.991-2.71.991-.652 0-1.236-.081-1.727-.291l-.023.116v4.255c.419.323 2.722 1.433 5.002 1.433ZM6.762 2.83c-.193-.206-.637-.413-1.682-.297-1.019.113-1.479.404-1.713.7-.247.312-.369.789-.369 1.554 0 .793.129 1.171.308 1.371.162.181.519.379 1.442.379.853 0 1.339-.235 1.638-.54.315-.322.527-.827.617-1.553.117-.935-.037-1.395-.241-1.614Zm4.155-.297c-1.044-.116-1.488.091-1.681.297-.204.219-.359.679-.242 1.614.091.726.303 1.231.618 1.553.299.305.784.54 1.638.54.922 0 1.28-.198 1.442-.379.179-.2.308-.578.308-1.371 0-.765-.123-1.242-.37-1.554-.233-.296-.693-.587-1.713-.7Z"
        />
        <path
          d="M6.25 9.037a.75.75 0 0 1 .75.75v1.501a.75.75 0 0 1-1.5 0V9.787a.75.75 0 0 1 .75-.75Zm4.25.75v1.501a.75.75 0 0 1-1.5 0V9.787a.75.75 0 0 1 1.5 0Z"
        />
      </svg>
    </div>
    <div
      class="prc-Stack-Stack-UQ9k6"
      data-align="stretch"
      data-component="Stack"
      data-direction="horizontal"
      data-gap="none"
      data-justify="start"
      data-padding="none"
      data-wrap="nowrap"
    >
      <span
        class="pr-1 prc-Text-Text-9mHv3"
        data-component="Text"
        title="A GitHub Copilot cloud agent session finished running."
      >
        Agent Session Finished
      </span>
      <relative-time
        data-component="RelativeTime"
        datetime="2026-10-05T02:34:59.000Z"
      >
        Oct 5, 2026
      </relative-time>
    </div>
    <div
      class="flex gap-1"
    />
  </div>
</div>
`;

exports[`renderer/components/notifications/NotificationFooter.tsx > security alerts should use github icon for avatar > Repository Dependabot Alerts Thread 1`] = `
<div>
  <div
    class="text-xs opacity-80 prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-component="Stack"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-wrap="wrap"
  >
    <button
      data-testid="view-profile"
      title="gitify-app"
      type="button"
    >
      <div
        class="prc-Stack-Stack-UQ9k6"
        data-align="center"
        data-component="Stack"
        data-direction="horizontal"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-testid="avatar"
        data-wrap="nowrap"
      >
        <img
          alt="gitify-app"
          class="prc-Avatar-Avatar-0xaUi"
          data-component="Avatar"
          height="14"
          src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
          style="--avatarSize-regular: 14px;"
          width="14"
        />
      </div>
    </button>
    <div
      class="prc-Stack-Stack-UQ9k6"
      data-align="stretch"
      data-component="Stack"
      data-direction="horizontal"
      data-gap="none"
      data-justify="start"
      data-padding="none"
      data-wrap="nowrap"
    >
      <span
        class="pr-1 prc-Text-Text-9mHv3"
        data-component="Text"
        title="You're watching the repository."
      >
        Updated
      </span>
      <relative-time
        data-component="RelativeTime"
        datetime="2017-05-20T17:51:57.000Z"
      >
        May 20, 2017
      </relative-time>
    </div>
    <div
      class="flex gap-1"
    >
      <button
        aria-describedby="_r_2_"
        type="button"
      >
        <span
          class="hover:bg-gitify-notification-pill-hover prc-Label-Label-qG-Zu"
          data-component="Label"
          data-size="small"
          data-variant="secondary"
          tabindex="0"
        >
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-component="Stack"
            data-direction="horizontal"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-check text-gitify-icon-open"
              data-component="Octicon"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="12"
              overflow="visible"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
              />
            </svg>
            <span
              class="text-xxs px-1 prc-Text-Text-9mHv3"
              data-component="Text"
            >
              1
            </span>
          </div>
        </span>
      </button>
      <span
        aria-hidden="true"
        class="prc-TooltipV2-Tooltip-tLeuB"
        data-component="Tooltip"
        data-direction="s"
        id="_r_2_"
        popover="auto"
        role="tooltip"
      >
        octocat approved these changes
      </span>
      <button
        aria-describedby="_r_3_"
        type="button"
      >
        <span
          class="hover:bg-gitify-notification-pill-hover prc-Label-Label-qG-Zu"
          data-component="Label"
          data-size="small"
          data-variant="secondary"
          tabindex="0"
        >
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-component="Stack"
            data-direction="horizontal"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-file-diff text-gitify-icon-closed"
              data-component="Octicon"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="12"
              overflow="visible"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M1 1.75C1 .784 1.784 0 2.75 0h7.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16H2.75A1.75 1.75 0 0 1 1 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h10.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073ZM8 3.25a.75.75 0 0 1 .75.75v1.5h1.5a.75.75 0 0 1 0 1.5h-1.5v1.5a.75.75 0 0 1-1.5 0V7h-1.5a.75.75 0 0 1 0-1.5h1.5V4A.75.75 0 0 1 8 3.25Zm-3 8a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1-.75-.75Z"
              />
            </svg>
            <span
              class="text-xxs px-1 prc-Text-Text-9mHv3"
              data-component="Text"
            >
              1
            </span>
          </div>
        </span>
      </button>
      <span
        aria-hidden="true"
        class="prc-TooltipV2-Tooltip-tLeuB"
        data-component="Tooltip"
        data-direction="s"
        id="_r_3_"
        popover="auto"
        role="tooltip"
      >
        gitify-app requested changes
      </span>
    </div>
  </div>
</div>
`;

exports[`renderer/components/notifications/NotificationFooter.tsx > security alerts should use github icon for avatar > Repository Vulnerability Alert 1`] = `
<div>
  <div
    class="text-xs opacity-80 prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-component="Stack"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-wrap="wrap"
  >
    <button
      data-testid="view-profile"
      title="gitify-app"
      type="button"
    >
      <div
        class="prc-Stack-Stack-UQ9k6"
        data-align="center"
        data-component="Stack"
        data-direction="horizontal"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-testid="avatar"
        data-wrap="nowrap"
      >
        <img
          alt="gitify-app"
          class="prc-Avatar-Avatar-0xaUi"
          data-component="Avatar"
          height="14"
          src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
          style="--avatarSize-regular: 14px;"
          width="14"
        />
      </div>
    </button>
    <div
      class="prc-Stack-Stack-UQ9k6"
      data-align="stretch"
      data-component="Stack"
      data-direction="horizontal"
      data-gap="none"
      data-justify="start"
      data-padding="none"
      data-wrap="nowrap"
    >
      <span
        class="pr-1 prc-Text-Text-9mHv3"
        data-component="Text"
        title="You're watching the repository."
      >
        Updated
      </span>
      <relative-time
        data-component="RelativeTime"
        datetime="2017-05-20T17:51:57.000Z"
      >
        May 20, 2017
      </relative-time>
    </div>
    <div
      class="flex gap-1"
    >
      <button
        aria-describedby="_r_4_"
        type="button"
      >
        <span
          class="hover:bg-gitify-notification-pill-hover prc-Label-Label-qG-Zu"
          data-component="Label"
          data-size="small"
          data-variant="secondary"
          tabindex="0"
        >
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-component="Stack"
            data-direction="horizontal"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-check text-gitify-icon-open"
              data-component="Octicon"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="12"
              overflow="visible"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
              />
            </svg>
            <span
              class="text-xxs px-1 prc-Text-Text-9mHv3"
              data-component="Text"
            >
              1
            </span>
          </div>
        </span>
      </button>
      <span
        aria-hidden="true"
        class="prc-TooltipV2-Tooltip-tLeuB"
        data-component="Tooltip"
        data-direction="s"
        id="_r_4_"
        popover="auto"
        role="tooltip"
      >
        octocat approved these changes
      </span>
      <button
        aria-describedby="_r_5_"
        type="button"
      >
        <span
          class="hover:bg-gitify-notification-pill-hover prc-Label-Label-qG-Zu"
          data-component="Label"
          data-size="small"
          data-variant="secondary"
          tabindex="0"
        >
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-component="Stack"
            data-direction="horizontal"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-file-diff text-gitify-icon-closed"
              data-component="Octicon"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="12"
              overflow="visible"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M1 1.75C1 .784 1.784 0 2.75 0h7.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16H2.75A1.75 1.75 0 0 1 1 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h10.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073ZM8 3.25a.75.75 0 0 1 .75.75v1.5h1.5a.75.75 0 0 1 0 1.5h-1.5v1.5a.75.75 0 0 1-1.5 0V7h-1.5a.75.75 0 0 1 0-1.5h1.5V4A.75.75 0 0 1 8 3.25Zm-3 8a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1-.75-.75Z"
              />
            </svg>
            <span
              class="text-xxs px-1 prc-Text-Text-9mHv3"
              data-component="Text"
            >
              1
            </span>
          </div>
        </span>
      </button>
      <span
        aria-hidden="true"
        class="prc-TooltipV2-Tooltip-tLeuB"
        data-component="Tooltip"
        data-direction="s"
        id="_r_5_"
        popover="auto"
        role="tooltip"
      >
        gitify-app requested changes
      </span>
    </div>
  </div>
</div>
`;

exports[`renderer/components/notifications/NotificationFooter.tsx > should default to known avatar if no user found 1`] = `
<div>
  <div
    class="text-xs opacity-80 prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-component="Stack"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-wrap="wrap"
  >
    <div
      class="prc-Stack-Stack-UQ9k6"
      data-align="center"
      data-component="Stack"
      data-direction="horizontal"
      data-gap="condensed"
      data-justify="start"
      data-padding="none"
      data-testid="avatar"
      data-wrap="nowrap"
    >
      <svg
        aria-hidden="true"
        class="octicon octicon-feed-person"
        data-component="Octicon"
        display="inline-block"
        fill="currentColor"
        focusable="false"
        height="14"
        overflow="visible"
        style="vertical-align: text-bottom;"
        viewBox="0 0 16 16"
        width="14"
      >
        <path
          d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16Zm.847-8.145a2.502 2.502 0 1 0-1.694 0C5.471 8.261 4 9.775 4 11c0 .395.145.995 1 .995h6c.855 0 1-.6 1-.995 0-1.224-1.47-2.74-3.153-3.145Z"
        />
      </svg>
    </div>
    <div
      class="prc-Stack-Stack-UQ9k6"
      data-align="stretch"
      data-component="Stack"
      data-direction="horizontal"
      data-gap="none"
      data-justify="start"
      data-padding="none"
      data-wrap="nowrap"
    >
      <span
        class="pr-1 prc-Text-Text-9mHv3"
        data-component="Text"
        title="You're watching the repository."
      >
        Updated
      </span>
      <relative-time
        data-component="RelativeTime"
        datetime="2017-05-20T17:51:57.000Z"
      >
        May 20, 2017
      </relative-time>
    </div>
    <div
      class="flex gap-1"
    >
      <button
        aria-describedby="_r_6_"
        type="button"
      >
        <span
          class="hover:bg-gitify-notification-pill-hover prc-Label-Label-qG-Zu"
          data-component="Label"
          data-size="small"
          data-variant="secondary"
          tabindex="0"
        >
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-component="Stack"
            data-direction="horizontal"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-check text-gitify-icon-open"
              data-component="Octicon"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="12"
              overflow="visible"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
              />
            </svg>
            <span
              class="text-xxs px-1 prc-Text-Text-9mHv3"
              data-component="Text"
            >
              1
            </span>
          </div>
        </span>
      </button>
      <span
        aria-hidden="true"
        class="prc-TooltipV2-Tooltip-tLeuB"
        data-component="Tooltip"
        data-direction="s"
        id="_r_6_"
        popover="auto"
        role="tooltip"
      >
        octocat approved these changes
      </span>
      <button
        aria-describedby="_r_7_"
        type="button"
      >
        <span
          class="hover:bg-gitify-notification-pill-hover prc-Label-Label-qG-Zu"
          data-component="Label"
          data-size="small"
          data-variant="secondary"
          tabindex="0"
        >
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-component="Stack"
            data-direction="horizontal"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-file-diff text-gitify-icon-closed"
              data-component="Octicon"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="12"
              overflow="visible"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M1 1.75C1 .784 1.784 0 2.75 0h7.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16H2.75A1.75 1.75 0 0 1 1 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h10.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073ZM8 3.25a.75.75 0 0 1 .75.75v1.5h1.5a.75.75 0 0 1 0 1.5h-1.5v1.5a.75.75 0 0 1-1.5 0V7h-1.5a.75.75 0 0 1 0-1.5h1.5V4A.75.75 0 0 1 8 3.25Zm-3 8a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1-.75-.75Z"
              />
            </svg>
            <span
              class="text-xxs px-1 prc-Text-Text-9mHv3"
              data-component="Text"
            >
              1
            </span>
          </div>
        </span>
      </button>
      <span
        aria-hidden="true"
        class="prc-TooltipV2-Tooltip-tLeuB"
        data-component="Tooltip"
        data-direction="s"
        id="_r_7_"
        popover="auto"
        role="tooltip"
      >
        gitify-app requested changes
      </span>
    </div>
  </div>
</div>
`;

exports[`renderer/components/notifications/NotificationFooter.tsx > should render itself & its children 1`] = `
<div>
  <div
    class="text-xs opacity-80 prc-Stack-Stack-UQ9k6"
    data-align="center"
    data-component="Stack"
    data-direction="horizontal"
    data-gap="condensed"
    data-justify="start"
    data-padding="none"
    data-wrap="wrap"
  >
    <button
      data-testid="view-profile"
      title="gitify-app"
      type="button"
    >
      <div
        class="prc-Stack-Stack-UQ9k6"
        data-align="center"
        data-component="Stack"
        data-direction="horizontal"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-testid="avatar"
        data-wrap="nowrap"
      >
        <img
          alt="gitify-app"
          class="prc-Avatar-Avatar-0xaUi"
          data-component="Avatar"
          height="14"
          src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
          style="--avatarSize-regular: 14px;"
          width="14"
        />
      </div>
    </button>
    <div
      class="prc-Stack-Stack-UQ9k6"
      data-align="stretch"
      data-component="Stack"
      data-direction="horizontal"
      data-gap="none"
      data-justify="start"
      data-padding="none"
      data-wrap="nowrap"
    >
      <span
        class="pr-1 prc-Text-Text-9mHv3"
        data-component="Text"
        title="You're watching the repository."
      >
        Updated
      </span>
      <relative-time
        data-component="RelativeTime"
        datetime="2017-05-20T17:51:57.000Z"
      >
        May 20, 2017
      </relative-time>
    </div>
    <div
      class="flex gap-1"
    >
      <button
        aria-describedby="_r_0_"
        type="button"
      >
        <span
          class="hover:bg-gitify-notification-pill-hover prc-Label-Label-qG-Zu"
          data-component="Label"
          data-size="small"
          data-variant="secondary"
          tabindex="0"
        >
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-component="Stack"
            data-direction="horizontal"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-check text-gitify-icon-open"
              data-component="Octicon"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="12"
              overflow="visible"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
              />
            </svg>
            <span
              class="text-xxs px-1 prc-Text-Text-9mHv3"
              data-component="Text"
            >
              1
            </span>
          </div>
        </span>
      </button>
      <span
        aria-hidden="true"
        class="prc-TooltipV2-Tooltip-tLeuB"
        data-component="Tooltip"
        data-direction="s"
        id="_r_0_"
        popover="auto"
        role="tooltip"
      >
        octocat approved these changes
      </span>
      <button
        aria-describedby="_r_1_"
        type="button"
      >
        <span
          class="hover:bg-gitify-notification-pill-hover prc-Label-Label-qG-Zu"
          data-component="Label"
          data-size="small"
          data-variant="secondary"
          tabindex="0"
        >
          <div
            class="prc-Stack-Stack-UQ9k6"
            data-align="center"
            data-component="Stack"
            data-direction="horizontal"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-file-diff text-gitify-icon-closed"
              data-component="Octicon"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="12"
              overflow="visible"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="12"
            >
              <path
                d="M1 1.75C1 .784 1.784 0 2.75 0h7.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16H2.75A1.75 1.75 0 0 1 1 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h10.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073ZM8 3.25a.75.75 0 0 1 .75.75v1.5h1.5a.75.75 0 0 1 0 1.5h-1.5v1.5a.75.75 0 0 1-1.5 0V7h-1.5a.75.75 0 0 1 0-1.5h1.5V4A.75.75 0 0 1 8 3.25Zm-3 8a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1-.75-.75Z"
              />
            </svg>
            <span
              class="text-xxs px-1 prc-Text-Text-9mHv3"
              data-component="Text"
            >
              1
            </span>
          </div>
        </span>
      </button>
      <span
        aria-hidden="true"
        class="prc-TooltipV2-Tooltip-tLeuB"
        data-component="Tooltip"
        data-direction="s"
        id="_r_1_"
        popover="auto"
        role="tooltip"
      >
        gitify-app requested changes
      </span>
    </div>
  </div>
</div>
`;
